fix description overflow on mobile version

--- a/styles/project.css
+++ b/styles/project.css
@@ -1,6 +1,6 @@
 .card {
   width: 18rem;
-  height: 28rem;
+  height: 29rem;
   background: #171717;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   background: #171717;
   color: white;
   width: 17.8rem;
-  height: 27.8rem;
+  height: 28.8rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,7 +37,7 @@
   .description {
     background: #242628;
     width: 100%;
-    height: 8rem;
+    height: 9rem;
     font-size: 0.9rem;
     padding: 0.5rem;
   }
@@ -90,7 +90,7 @@
 .card::after {
   background: #17171733;
   width: 18rem;
-  height: 28.5rem;
+  height: 29.5rem;
   content: " ";
   display: block;
   position: absolute;
